# OptMATH

./: .gitignore  README.md  pyproject.toml  quick_start.md
benchmark/: MAMO_EasyLP.json  NL4OPT.json  OptMATH_Bench.json
config/: default.yaml
eval/: README.md  __init__.py  cli.py  evaluator.py  executor.py
generators/AircraftAssignment/: aircraft.ipynb  metadata.json
generators/AircraftLanding/: metadata.json
generators/Binpacking_Problem/: Binpacking.py  metadata.json
generators/Blending_problem/: Blending_Problem.py  metadata.json  readme.md
generators/CFLP/: CFLP_parsed.py  metadata.json
generators/CLSP_expand_capacity/: CLSP_expand_capacity_parsed.py  metadata.json
generators/CarSelection/: CarSelection_parsed.py  metadata.json  readme.md
generators/ContractAllocation/: ContractAllocation_parsed.py  metadata.json
generators/Diet_Problem/: metadata.json  readme.md
generators/Factory_Planning_Problem/: Factory_Planning_Problem.py  metadata.json
generators/Flowshop_2/: metadata.json  readme.md
generators/JopShop/: README.md  generator.py  metadata.json
generators/KnapSack/: Knapsack.py
generators/MarketShare/: MarketShare.py  readme.md
generators/MultiSetCover/: SetMultiCover.py  metadata.json
generators/Portfolio/: Portfolio.py  readme.md
generators/Revenue_management/: Revenue_management.py
generators/SchedulingProblem/: SchedulingProblem_parsed.py  metadata.json  (+1 more)
optmath/: __init__.py  __main__.py  cli.py
scripts/: run_eval.sh  run_full_pipeline.sh
tests/: conftest.py  test_config.py  test_evaluation.py  test_generators.py
(+142 files in other folders)
